# nfvsos

./: .gitignore  README.md  dpdk.py  setup.cfg  sosanalyze.py  utils.py
conditions/: pmd_cores_numa.py
nfvsos/: condition.py  dpdk.py  sosanalyze.py  utilities.py
nfvsos/checkers/: __init__.py  cpu_overlap.py  ovs_dpdk.py  pmd.py  proc.py  tuned.py  vcpu.py
nfvsos/utils/: __init__.py  config.py  cpu_layout.py  ovs_config.py  system.py  tuned.py  utilities.py
