[metadata]
name = nfvsos

[files]
packages =
    nfvsos

[wheel]
universal = 1

[compile_catalog]
directory = nfvsos/locale
domain = nfvsos

[update_catalog]
domain = nfvsos
output_dir = nfvsos/locale
input_file = nfvsos/locale/nfvsos.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nfvsos/locale/nfvsos.pot

[entry_points]
console_scripts =
    nfvsos = nfvsos.sosanalyze:main
